examples/errors/03_type_mismatch/type_mismatch.txy
proc main()
    var x: int = 0;
    var y: float = x + 0;
endproc;